# 2024-advent-of-code

./: CMakeLists.txt  day01_1.cpp  day01_2.cpp  day02_1.cpp  day02_2.cpp  day03_1.cpp  day03_2.cpp  day04_1.cpp  day04_2.cpp  main.cpp
include/: day01_1.h  day01_2.h  day02_1.h  day02_2.h  day03_1.h  day03_2.h  day04_1.h  day04_2.h
