cmake_minimum_required(VERSION 3.30)
project(2024_advent_of_code)

set(CMAKE_CXX_STANDARD 20)

add_executable(2024_advent_of_code main.cpp
        day01_1.cpp
        include/day01_1.h
        include/day01_2.h
        day01_2.cpp
        include/day02_1.h
        day02_1.cpp
        include/day02_2.h
        day02_2.cpp
        include/day03_1.h
        day03_1.cpp
        day03_2.cpp
        include/day03_2.h
        day04_1.cpp
        include/day04_1.h
        day04_2.cpp
        include/day04_2.h
)
